  - Truncate long labels with ellipsis in labels page
  - Update runner version only when updating contacted_at
  - Add link from system note to compare with previous version
  - Use gitlab-shell v3.6.2 (GIT TRACE logging)
  - Add `/projects/visible` API endpoint (Ben Boeckel)
  - Fix centering of custom header logos (Ashley Dumaine)
  - ExpireBuildArtifactsWorker query builds table without ordering enqueuing one job per build to cleanup
  - Add an example for testing a phoenix application with Gitlab CI in the docs (Manthan Mallikarjun)
  - Updating verbiage on git basics to be more intuitive
  - Clarify documentation for Runners API (Gennady Trafimenkov)
  - Change user & group landing page routing from /u/:username to /:username
  - Prevent running GfmAutocomplete setup for each diff note !6569
  - Added documentation for .gitattributes files
  - AbstractReferenceFilter caches project_refs on RequestStore when active
  - Replaced the check sign to arrow in the show build view. !6501
  - Add a /wip slash command to toggle the Work In Progress status of a merge request. !6259 (tbalthazar)
  - Fix Error 500 when viewing old merge requests with bad diff data
  - Create a new /templates namespace for the /licenses, /gitignores and /gitlab_ci_ymls API endpoints. !5717 (tbalthazar)
  - Speed-up group milestones show page
  - Fix inconsistent options dropdown caret on mobile viewports (ClemMakesApps)
  - Don't include archived projects when creating group milestones. !4940 (Jeroen Jacobs)
  - Add tag shortcut from the Commit page. !6543
  - Keep refs for each deployment
  - Allow browsing branches that end with '.atom'
  - Log LDAP lookup errors and don't swallow unrelated exceptions. !6103 (Markus Koller)
  - Add more tests for calendar contribution (ClemMakesApps)
  - Update Gitlab Shell to fix some problems with moving projects between storages
  - Cache rendered markdown in the database, rather than Redis